--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: linear-gradient(135deg, #4caf50, #81c784);
   --foreground: #171717;
 }
 
@@ -23,4 +23,23 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.ComingSoon {
+  display: flex;              
+  justify-content: center;    
+  align-items: center;       
+  font-size: 4rem;       
+  font-weight: bold;     
+  color: white;       
+  font-family: 'Arial', sans-serif; 
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.3); 
+  height: 100vh;
+}
+
+.Subtitle {
+  
+  margin-top: 1rem; 
+  margin-left: 6rem;
+
 }
